tests/baselines/reference/wrappedRecursiveGenericType(strict=true).errors.txt
wrappedRecursiveGenericType.ts(11,1): error TS2454: Variable 'x' is used before being assigned.
wrappedRecursiveGenericType.ts(12,1): error TS2454: Variable 'x' is used before being assigned.
wrappedRecursiveGenericType.ts(13,1): error TS2454: Variable 'x' is used before being assigned.
wrappedRecursiveGenericType.ts(13,1): error TS2322: Type 'number' is not assignable to type 'X<number>'.
wrappedRecursiveGenericType.ts(14,1): error TS2454: Variable 'x' is used before being assigned.
wrappedRecursiveGenericType.ts(14,1): error TS2322: Type 'number' is not assignable to type 'X<number>'.


==== wrappedRecursiveGenericType.ts (6 errors) ====
    interface X<T> { e: T; }
    interface A<T> {
        a: B<T>;
        val: T;
    }
    interface B<T> {
        b: A<X<T>>;
        val: T;
    }
    var x: A<number>;
    x.val = 5;         // val -> number
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    x.a.val = 5;       // val -> number
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    x.a.b.val = 5;     // val -> X<number> (This should be an error)
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    ~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'X<number>'.
    x.a.b.a.val = 5;   // val -> X<number> (This should be an error)
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    ~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'X<number>'.